syntax = "proto3";
package push;
import "tx.proto";

// BLOCK ---------------------------------------------------------------------------------------------------------------

enum Role {
    ROLE_UNSPECIFIED = 0;
    VALIDATOR = 1;
    ATTESTER = 2;
}

enum Vote {
    VOTE_UNSPECIFIED = 0;
    ACCEPTED = 1;
    REJECTED = 2;
}

message DidMapping {
    map<string, string> didMapping = 1;
}


// section added by a block producer (we call him Validator in the context of the block)
message TxValidatorData {
    // any validator can vote if he supports the tx or not
    Vote vote = 1;
    // additional context goes below.
    // if it is signed = all attestors agree with this context of tx processing
    DidMapping didMapping = 2;
}

// section added by a block attester
// offset0 = block producer vote
// offset1..N = block attestor votes
message TxAttestorData {
    // any attestor can vote if he supports the tx or not
    Vote vote = 1;
    // any additional fields below, that attestor wants to add for the 'storage' layer
    // i.e. repeated string spam
}

// transaction with voting data
message TransactionObj {
    // raw bytes: you need to decode this based on category into a Transaction
    Transaction tx = 1;
    // validator(block producer) processes 'data' field and fills this output
    TxValidatorData validatorData = 2;
    // attestors process 'data' and 'metaData' and fill this output
    repeated TxAttestorData attestorData = 3;
}

message Signer {
    // deprecated
    // string node = 1;
    // deprecated
    // Role role = 2;

    bytes sig = 1;
}

message Block {
    // block timestamp in millis;
    uint64 ts = 1;
    bytes attestToken = 4;
    repeated TransactionObj txObj = 2;
    repeated Signer signers = 3;
}

// INTERNAL NODE API

// BLOCK ATTESTATION
message AttestBlockResult {
    // reply per transaction (same order as in block)
    repeated TxAttestorData attestorData = 1;
    // signature for the whole block
    // assuming that on this node TxAttestorData is filled per every tx
    Signer signer = 2;
}

// SIGNATURE ATTESTATION
message AttestSignaturesRequest {
    repeated AttestBlockResult attestations = 1;
    bytes initialBlockHash = 2;
    bytes finalBlockHash = 3;
}

message AttestSignaturesResponse {
    repeated AttestorReport attestations = 1;
}

message AttestorReport {
    string nodeId = 1 ;
    string transactionHash = 2;
    int32 vote = 3;
    bytes dataForSc = 4;
    bytes dataSigForSc = 5;
}